--- a/test.ipynb
+++ b/test.ipynb
@@ -164,31 +164,10 @@
        "        <th>level</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>20</td>\n",
+       "        <td>86</td>\n",
        "        <td>Aiden</td>\n",
-       "        <td>Ramirez</td>\n",
+       "        <td>Hess</td>\n",
        "        <td>M</td>\n",
-       "        <td>paid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>27</td>\n",
-       "        <td>Carlos</td>\n",
-       "        <td>Carter</td>\n",
-       "        <td>M</td>\n",
-       "        <td>free</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>24</td>\n",
-       "        <td>Layla</td>\n",
-       "        <td>Griffin</td>\n",
-       "        <td>F</td>\n",
-       "        <td>paid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>35</td>\n",
-       "        <td>Molly</td>\n",
-       "        <td>Taylor</td>\n",
-       "        <td>F</td>\n",
        "        <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -198,14 +177,35 @@
        "        <td>M</td>\n",
        "        <td>free</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>30</td>\n",
+       "        <td>Avery</td>\n",
+       "        <td>Watkins</td>\n",
+       "        <td>F</td>\n",
+       "        <td>paid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>73</td>\n",
+       "        <td>Jacob</td>\n",
+       "        <td>Klein</td>\n",
+       "        <td>M</td>\n",
+       "        <td>paid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>57</td>\n",
+       "        <td>Katherine</td>\n",
+       "        <td>Gay</td>\n",
+       "        <td>F</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(20, 'Aiden', 'Ramirez', 'M', 'paid'),\n",
-       " (27, 'Carlos', 'Carter', 'M', 'free'),\n",
-       " (24, 'Layla', 'Griffin', 'F', 'paid'),\n",
-       " (35, 'Molly', 'Taylor', 'F', 'free'),\n",
-       " (74, 'Braden', 'Parker', 'M', 'free')]"
+       "[(86, 'Aiden', 'Hess', 'M', 'free'),\n",
+       " (74, 'Braden', 'Parker', 'M', 'free'),\n",
+       " (30, 'Avery', 'Watkins', 'F', 'paid'),\n",
+       " (73, 'Jacob', 'Klein', 'M', 'paid'),\n",
+       " (57, 'Katherine', 'Gay', 'F', 'free')]"
       ]
      },
      "execution_count": 4,
