--- a/etl.ipynb
+++ b/etl.ipynb
@@ -78,7 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "song_files = get_files(\"data/song_data\")"
+    "filepath = get_files(\"data/song_data\")"
    ]
   },
   {
@@ -87,18 +87,9 @@
    "metadata": {
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/workspace/data/song_data/A/A/A/TRAAAAW128F429D538.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "filepath = song_files[0]\n",
-    "print(filepath)"
+    "song_files = filepath[0]"
    ]
   },
   {
@@ -176,7 +167,7 @@
     }
    ],
    "source": [
-    "df = pd.read_json(filepath, lines=True)\n",
+    "df = pd.read_json(song_files, lines=True)\n",
     "df.head()"
    ]
   },
@@ -213,7 +204,7 @@
     }
    ],
    "source": [
-    "song_data = song_data = df[[\"song_id\", \"title\", \"artist_id\", \"year\", \"duration\"]].values[0].tolist()\n",
+    "song_data = df[[\"song_id\", \"title\", \"artist_id\", \"year\", \"duration\"]].values[0].tolist()\n",
     "song_data"
    ]
   },
@@ -417,7 +408,7 @@
    },
    "outputs": [],
    "source": [
-    "log_files = get_files('data/log_data')"
+    "filepath = get_files('data/log_data')"
    ]
   },
   {
@@ -428,7 +419,7 @@
    },
    "outputs": [],
    "source": [
-    "filepath = log_files[0]"
+    "log_files = filepath[0]"
    ]
   },
   {
@@ -625,7 +616,7 @@
     }
    ],
    "source": [
-    "df = pd.read_json(filepath, lines=True)\n",
+    "df = pd.read_json(log_files, lines=True)\n",
     "df.head()"
    ]
   },
@@ -840,7 +831,7 @@
     }
    ],
    "source": [
-    "df = df[(df['page'] == 'NextSong')]\n",
+    "df = df[df['page'] == 'NextSong']\n",
     "df.head()"
    ]
   },
@@ -891,8 +882,8 @@
    },
    "outputs": [],
    "source": [
-    "time_data = list((t, t.dt.hour, t.dt.day, t.dt.weekofyear, t.dt.month, t.dt.year, t.dt.weekday))\n",
-    "column_labels = list(('start_time', 'hour', 'day', 'week', 'month', 'year', 'weekday'))"
+    "time_data = list(zip(t, t.dt.hour, t.dt.day, t.dt.weekofyear, t.dt.month, t.dt.year, t.dt.weekday))\n",
+    "column_labels = ('start_time', 'hour', 'day', 'week', 'month', 'year', 'weekday')"
    ]
   },
   {
@@ -1002,7 +993,7 @@
     }
    ],
    "source": [
-    "time_df = pd.DataFrame.from_dict(dict(zip(column_labels, time_data)))\n",
+    "time_df = pd.DataFrame(time_data, columns=column_labels)\n",
     "time_df.head()"
    ]
   },
