--- a/test.ipynb
+++ b/test.ipynb
@@ -64,7 +64,7 @@
        "        <th>user_agent</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>0</td>\n",
+       "        <td>1</td>\n",
        "        <td>2018-11-30 00:22:07.796000</td>\n",
        "        <td>91</td>\n",
        "        <td>free</td>\n",
@@ -75,7 +75,7 @@
        "        <td>Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; WOW64; Trident/6.0)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>1</td>\n",
+       "        <td>2</td>\n",
        "        <td>2018-11-30 01:08:41.796000</td>\n",
        "        <td>73</td>\n",
        "        <td>paid</td>\n",
@@ -86,7 +86,7 @@
        "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2&quot;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>2</td>\n",
+       "        <td>3</td>\n",
        "        <td>2018-11-30 01:12:48.796000</td>\n",
        "        <td>73</td>\n",
        "        <td>paid</td>\n",
@@ -97,7 +97,7 @@
        "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2&quot;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>3</td>\n",
+       "        <td>4</td>\n",
        "        <td>2018-11-30 01:17:05.796000</td>\n",
        "        <td>73</td>\n",
        "        <td>paid</td>\n",
@@ -108,7 +108,7 @@
        "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2&quot;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>4</td>\n",
+       "        <td>5</td>\n",
        "        <td>2018-11-30 01:20:56.796000</td>\n",
        "        <td>73</td>\n",
        "        <td>paid</td>\n",
@@ -121,11 +121,11 @@
        "</table>"
       ],
       "text/plain": [
-       "[(0, datetime.datetime(2018, 11, 30, 0, 22, 7, 796000), 91, 'free', None, None, 829, 'Dallas-Fort Worth-Arlington, TX', 'Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; WOW64; Trident/6.0)'),\n",
-       " (1, datetime.datetime(2018, 11, 30, 1, 8, 41, 796000), 73, 'paid', None, None, 1049, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"'),\n",
-       " (2, datetime.datetime(2018, 11, 30, 1, 12, 48, 796000), 73, 'paid', None, None, 1049, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"'),\n",
-       " (3, datetime.datetime(2018, 11, 30, 1, 17, 5, 796000), 73, 'paid', None, None, 1049, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"'),\n",
-       " (4, datetime.datetime(2018, 11, 30, 1, 20, 56, 796000), 73, 'paid', None, None, 1049, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"')]"
+       "[(1, datetime.datetime(2018, 11, 30, 0, 22, 7, 796000), 91, 'free', None, None, 829, 'Dallas-Fort Worth-Arlington, TX', 'Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; WOW64; Trident/6.0)'),\n",
+       " (2, datetime.datetime(2018, 11, 30, 1, 8, 41, 796000), 73, 'paid', None, None, 1049, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"'),\n",
+       " (3, datetime.datetime(2018, 11, 30, 1, 12, 48, 796000), 73, 'paid', None, None, 1049, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"'),\n",
+       " (4, datetime.datetime(2018, 11, 30, 1, 17, 5, 796000), 73, 'paid', None, None, 1049, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"'),\n",
+       " (5, datetime.datetime(2018, 11, 30, 1, 20, 56, 796000), 73, 'paid', None, None, 1049, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"')]"
       ]
      },
      "execution_count": 3,
@@ -140,6 +140,110 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>songplay_id</th>\n",
+       "        <th>start_time</th>\n",
+       "        <th>user_id</th>\n",
+       "        <th>level</th>\n",
+       "        <th>song_id</th>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>session_id</th>\n",
+       "        <th>location</th>\n",
+       "        <th>user_agent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>2018-11-30 00:22:07.796000</td>\n",
+       "        <td>91</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>829</td>\n",
+       "        <td>Dallas-Fort Worth-Arlington, TX</td>\n",
+       "        <td>Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; WOW64; Trident/6.0)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>2018-11-30 01:08:41.796000</td>\n",
+       "        <td>73</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>1049</td>\n",
+       "        <td>Tampa-St. Petersburg-Clearwater, FL</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>2018-11-30 01:12:48.796000</td>\n",
+       "        <td>73</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>1049</td>\n",
+       "        <td>Tampa-St. Petersburg-Clearwater, FL</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>2018-11-30 01:17:05.796000</td>\n",
+       "        <td>73</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>1049</td>\n",
+       "        <td>Tampa-St. Petersburg-Clearwater, FL</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>5</td>\n",
+       "        <td>2018-11-30 01:20:56.796000</td>\n",
+       "        <td>73</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>1049</td>\n",
+       "        <td>Tampa-St. Petersburg-Clearwater, FL</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2&quot;</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, datetime.datetime(2018, 11, 30, 0, 22, 7, 796000), 91, 'free', None, None, 829, 'Dallas-Fort Worth-Arlington, TX', 'Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; WOW64; Trident/6.0)'),\n",
+       " (2, datetime.datetime(2018, 11, 30, 1, 8, 41, 796000), 73, 'paid', None, None, 1049, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"'),\n",
+       " (3, datetime.datetime(2018, 11, 30, 1, 12, 48, 796000), 73, 'paid', None, None, 1049, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"'),\n",
+       " (4, datetime.datetime(2018, 11, 30, 1, 17, 5, 796000), 73, 'paid', None, None, 1049, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"'),\n",
+       " (5, datetime.datetime(2018, 11, 30, 1, 20, 56, 796000), 73, 'paid', None, None, 1049, 'Tampa-St. Petersburg-Clearwater, FL', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"')]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT * FROM songplays LIMIT 5;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "editable": true
    },
@@ -208,7 +312,7 @@
        " (57, 'Katherine', 'Gay', 'F', 'free')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "editable": true
    },
@@ -288,7 +392,7 @@
        " ('SOCIWDW12A8C13D406', 'Soul Deep', 'ARMJAGH1187FB546F3', 1969, 148.03546)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
@@ -368,7 +472,7 @@
        " ('ARMJAGH1187FB546F3', 'The Box Tops', 'Memphis, TN', 35.14968, -90.04892)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "editable": true
    },
@@ -460,7 +564,7 @@
        " (datetime.datetime(2018, 11, 30, 1, 20, 56, 796000), 1, 30, 48, 11, 2018, 4)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
