--- a/etl.ipynb
+++ b/etl.ipynb
@@ -1119,7 +1119,7 @@
     "        songid, artistid = None, None\n",
     "\n",
     "    # insert songplay record\n",
-    "    songplay_data = (index, row.ts, row.userId, row.level, songid, artistid, row.sessionId,\\\n",
+    "    songplay_data = (row.ts, row.userId, row.level, songid, artistid, row.sessionId,\\\n",
     "                    row.location, row.userAgent)\n",
     "    cur.execute(songplay_table_insert, songplay_data)\n",
     "    conn.commit()"
